<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_forward"
        android:title="Forward" />

    <item
        android:id="@+id/action_reload"
        android:title="Reload Page" />

    <item
        android:id="@+id/action_find_in_page"
        android:title="Find in Page" />

    <item
        android:id="@+id/action_reader_mode"
        android:title="Reader Mode" />

    <item
        android:id="@+id/action_desktop_site"
        android:checkable="true"
        android:title="Desktop Site" />

    <item
        android:id="@+id/action_copy_clean_link"
        android:title="Copy Clean Link" />

    <item
        android:id="@+id/action_add_bookmark"
        android:title="Add to Bookmarks" />

    <item
        android:id="@+id/action_share"
        android:title="Share Link" />

    <item
        android:id="@+id/action_new_tab"
        android:title="@string/new_tab" />

    <item
        android:id="@+id/action_new_private_tab"
        android:title="@string/new_private_tab" />

    <item
        android:id="@+id/action_bookmarks"
        android:title="@string/title_bookmarks" />

    <item
        android:id="@+id/action_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/action_downloads"
        android:title="Downloads" />

    <item
        android:id="@+id/action_site_transparency"
        android:title="Site Shields &amp; Privacy" />

    <item
        android:id="@+id/action_search_engine"
        android:title="Search Engine" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/title_settings" />
</menu>
